v1.5.3 - TBD



v1.5.2 - April 5, 2025
NEW:
  It is now possible to get a Soul Speed Enchanted Book by inserting an Amethyst in the Magic Infuser.
  Now, the Dimensional Anchor itself will not travel to other dimensions.
  Now detects the WTHIT (What The Hell Is That) mod.
  Added EMC value to Unimatter.
CHANGES:
  Renamed Matter/Energy Converter to Matter/Energy Core.
  Circuit Tier 8 and Circuit Tier 9 now use an Aluminum Ingot in their recipe instead of an
    Aluminum Plate.
  If you enabled the Dump Tags config option in the ADDSynthCore config, the tags are
    now sorted alphabetically, but lists vanilla minecraft tags first, followed
    by forge tags, then tags from other mods.
REMOVED:
  Amethyst:
   - We use vanilla Amethyst Shards now.
   - We still spawn Amethyst Ore, and it drops a vanilla Amethyst Shard when mined.
   - If your world previously contained ADDSynth Material Amethyst or Amethyst Blocks,
      those will automatically be replaced with vanilla Amethyst Shards and Amethyst Blocks.
  Removed Null Block to Void Crystals crafting recipe.
   - Since you're probably not supposed to interact with ethereal objects.
FIXED:
  Various Team Manager Fixes:
   - Fixed Client randomly crashing when interacting with Team Manager.
   - Fixed Objective Criteria Data not showing on first use.
   - Fixed Team color not being set correctly.
  Fixed Passive Machines (Plasma Generator and Crystal Matter Generator) not saving their inventory.
  Fixed JEI recipes displaying items 1 pixel off in machine slots.
  FINALLY Fixed first two Music Boxes playing at once, if the first was directly powered.
  Fixed Music Boxes and Lasers activating from an active redstone signal when the world loads.
    - (They now remember the powered state.)
    - These should only activate on Rising Edge, aka, first tick powered on from an OFF state.
  Fix Plasma missing EMC value. This fixed missing EMC for a bunch of other things as well.